--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,6 +49,7 @@
 @import "patterns/_search";
 @import "patterns/_project_page";
 @import "patterns/_login_page";
+@import "patterns/_emploi";
 
 //Pages
 @import "pages/_404";
