--- a/scss/patterns/_social.scss
+++ b/scss/patterns/_social.scss
@@ -31,6 +31,7 @@
           .icon-print{
             font-size: 12px;
             cursor: pointer;
+            padding-left: 10px;
           }
         }
       }
