--- a/scss/patterns/_presse_home.scss
+++ b/scss/patterns/_presse_home.scss
@@ -67,22 +67,30 @@
     }
     &-title{
       margin-bottom: 15px;
-      a{
-        font-size: 28px;
-        color: $navy-blue;
-        font-family: $font-bold;
-        line-height: 35px;
+      font-size: 28px;
+      color: $navy-blue;
+      font-family: $font-bold;
+      line-height: 35px;
+    }
+    &:hover{
+      .read__more{
+        padding-left: 52px;
+        color:$color-readmore;
+        &:before{
+          left: 27px;
+        }
+        &:after{
+          left:0;
+        }
       }
     }
     &:nth-child(1){
       .image{
         border-bottom: 6px solid #9ee3f3;
       }
-      .presse__home--item-title{
-        a{
-          &:hover{
-            color: #9ee3f3;
-          }
+      &:hover{
+        .presse__home--item-title{
+          color: #9ee3f3;
         }
       }
     }
@@ -90,11 +98,9 @@
       .image{
         border-bottom: 6px solid #752a97;
       }
-      .presse__home--item-title{
-        a{
-          &:hover{
-            color: #752a97;
-          }
+      &:hover{
+        .presse__home--item-title{
+          color: #752a97;
         }
       }
     }
@@ -102,11 +108,9 @@
       .image{
         border-bottom: 6px solid #aeca10;
       }
-      .presse__home--item-title{
-        a{
-          &:hover{
-            color: #aeca10;
-          }
+      &:hover{
+        .presse__home--item-title{
+          color: #aeca10;
         }
       }
     }
@@ -114,11 +118,9 @@
       .image{
         border-bottom: 6px solid #ff0d0d;
       }
-      .presse__home--item-title{
-        a{
-          &:hover{
-            color: #ff0d0d;
-          }
+      &:hover{
+        .presse__home--item-title{
+          color: #ff0d0d;
         }
       }
     }
@@ -148,11 +150,9 @@
           .image{
             border-bottom: 6px solid #aeca10;
           }
-          .presse__home--item-title{
-            a{
-              &:hover{
-                color: #aeca10;
-              }
+          &:hover{
+            .presse__home--item-title{
+              color: #aeca10;
             }
           }
         }
@@ -160,11 +160,9 @@
           .image{
             border-bottom: 6px solid #ff0d0d;
           }
-          .presse__home--item-title{
-            a{
-              &:hover{
-                color: #ff0d0d;
-              }
+          &:hover{
+            .presse__home--item-title{
+              color: #ff0d0d;
             }
           }
         }
@@ -192,22 +190,18 @@
       .image{
         border-bottom: 6px solid #aeca10;
       }
-      .presse__home--item-title{
-        a{
-          &:hover{
-            color: #aeca10;
-          }
+      &:hover{
+        .presse__home--item-title{
+          color: #aeca10;
         }
       }
       &:nth-child(2){
         .image{
           border-bottom: 6px solid #ff0d0d;
         }
-        .presse__home--item-title{
-          a{
-            &:hover{
-              color: #ff0d0d;
-            }
+        &:hover{
+          .presse__home--item-title{
+            color: #ff0d0d;
           }
         }
       }
