--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -3498,33 +3498,40 @@ ul.primary li a {
       padding: 28px 35px 0;
       padding: 1.75rem 2.1875rem 0; }
     .presse__home--item-title {
-      margin-bottom: 15px; }
-      .presse__home--item-title a {
-        font-size: 28px;
-        font-size: 1.75rem;
-        color: #051039;
-        font-family: excellenceinmotion_bold;
-        line-height: 35px;
-        line-height: 2.1875rem; }
+      margin-bottom: 15px;
+      font-size: 28px;
+      font-size: 1.75rem;
+      color: #051039;
+      font-family: excellenceinmotion_bold;
+      line-height: 35px;
+      line-height: 2.1875rem; }
+    .presse__home--item:hover .read__more {
+      padding-left: 52px;
+      color: #0062e6; }
+      .presse__home--item:hover .read__more:before {
+        left: 27px;
+        left: 1.6875rem; }
+      .presse__home--item:hover .read__more:after {
+        left: 0; }
     .presse__home--item:nth-child(1) .image {
       border-bottom: 6px solid #9ee3f3;
       border-bottom: 0.375rem solid #9ee3f3; }
-    .presse__home--item:nth-child(1) .presse__home--item-title a:hover {
+    .presse__home--item:nth-child(1):hover .presse__home--item-title {
       color: #9ee3f3; }
     .presse__home--item:nth-child(2) .image {
       border-bottom: 6px solid #752a97;
       border-bottom: 0.375rem solid #752a97; }
-    .presse__home--item:nth-child(2) .presse__home--item-title a:hover {
+    .presse__home--item:nth-child(2):hover .presse__home--item-title {
       color: #752a97; }
     .presse__home--item:nth-child(3) .image {
       border-bottom: 6px solid #aeca10;
       border-bottom: 0.375rem solid #aeca10; }
-    .presse__home--item:nth-child(3) .presse__home--item-title a:hover {
+    .presse__home--item:nth-child(3):hover .presse__home--item-title {
       color: #aeca10; }
     .presse__home--item:nth-child(4) .image {
       border-bottom: 6px solid #ff0d0d;
       border-bottom: 0.375rem solid #ff0d0d; }
-    .presse__home--item:nth-child(4) .presse__home--item-title a:hover {
+    .presse__home--item:nth-child(4):hover .presse__home--item-title {
       color: #ff0d0d; }
   .presse__home .block-views {
     width: 100%; }
@@ -3549,12 +3556,12 @@ ul.primary li a {
     .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(1) .image {
       border-bottom: 6px solid #aeca10;
       border-bottom: 0.375rem solid #aeca10; }
-    .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(1) .presse__home--item-title a:hover {
+    .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(1):hover .presse__home--item-title {
       color: #aeca10; }
     .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(2) .image {
       border-bottom: 6px solid #ff0d0d;
       border-bottom: 0.375rem solid #ff0d0d; }
-    .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(2) .presse__home--item-title a:hover {
+    .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(2):hover .presse__home--item-title {
       color: #ff0d0d; }
   .presse__home.see-also-block {
     padding: 65px 0 85px;
@@ -3582,12 +3589,12 @@ ul.primary li a {
       .presse__home.see-also-block .block-bean .image {
         border-bottom: 6px solid #aeca10;
         border-bottom: 0.375rem solid #aeca10; }
-      .presse__home.see-also-block .block-bean .presse__home--item-title a:hover {
+      .presse__home.see-also-block .block-bean:hover .presse__home--item-title {
         color: #aeca10; }
       .presse__home.see-also-block .block-bean:nth-child(2) .image {
         border-bottom: 6px solid #ff0d0d;
         border-bottom: 0.375rem solid #ff0d0d; }
-      .presse__home.see-also-block .block-bean:nth-child(2) .presse__home--item-title a:hover {
+      .presse__home.see-also-block .block-bean:nth-child(2):hover .presse__home--item-title {
         color: #ff0d0d; }
 
 .bref__home {
