--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -1946,7 +1946,7 @@ ul.primary li a {
       .header__logo {
         max-width: 175px;
         position: absolute;
-        margin-top: 5px;
+        margin-top: 10px;
         margin-bottom: 0; } }
     @media screen and (min-width: 1280px) {
       .header__logo {
@@ -1955,9 +1955,15 @@ ul.primary li a {
         position: inherit; } }
     .header__logo-link {
       float: left;
-      transition: all 1s; }
+      transition: all 1s;
+      display: block;
+      width: 100%; }
+      .header__logo-link img {
+        width: 120px;
+        width: 7.5rem;
+        margin: 0 auto; }
   .header__right {
-    width: 80%;
+    width: 100%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1968,15 +1974,14 @@ ul.primary li a {
     left: -100%;
     top: 0;
     transition: all 1s ease;
-    padding: 30px 0;
-    padding: 1.875rem 0; }
+    padding: 15px 0;
+    padding: 0.9375rem 0; }
     .header__right.opened {
       left: 0; }
     @media screen and (min-width: 768px) {
       .header__right {
-        max-width: 600px;
-        padding: 30px 15px;
-        padding: 1.875rem 0.9375rem; } }
+        padding: 15px;
+        padding: 0.9375rem; } }
     @media screen and (min-width: 992px) {
       .header__right {
         background: none;
@@ -1994,6 +1999,10 @@ ul.primary li a {
       justify-content: flex-end;
       align-items: center; }
       @media screen and (min-width: 992px) {
+        .header__right--top {
+          height: 110px;
+          height: 6.875rem; } }
+      @media screen and (min-width: 1280px) {
         .header__right--top {
           height: 85px;
           height: 5.3125rem; } }
@@ -2064,10 +2073,14 @@ ul.primary li a {
         align-items: center;
         position: unset; }
         .header__right--bottom .search .main-search {
-          width: 100%;
+          width: 90%;
           display: flex; }
+          @media screen and (min-width: 768px) {
+            .header__right--bottom .search .main-search {
+              width: 95%; } }
           @media screen and (min-width: 992px) {
             .header__right--bottom .search .main-search {
+              width: 100%;
               display: block; } }
         .header__right--bottom .search__input {
           width: 100%;
