--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -3491,7 +3491,8 @@ ul.primary li a {
     background: #fff;
     box-shadow: 1px 1px 12px #ccc;
     margin: 9px 0;
-    margin: 0.5625rem 0; }
+    margin: 0.5625rem 0;
+    position: relative; }
     @media screen and (min-width: 480px) {
       .presse__home--item {
         width: calc(50% - 18px);
@@ -3518,6 +3519,13 @@ ul.primary li a {
       font-family: excellenceinmotion_bold;
       line-height: 35px;
       line-height: 2.1875rem; }
+    .presse__home--item a {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      font-size: 0; }
     .presse__home--item:hover .read__more {
       padding-left: 52px;
       color: #0062e6; }
